# legged_control

./: Dockerfile
doggy_msgs/: CMakeLists.txt
doggy_msgs/msg/: DoggyMove.msg
doggy_tele/: CMakeLists.txt  package.xml
doggy_tele/config/: doggy_joy_gazebo.yaml
doggy_tele/include/: cmd_to_ocs2.h  joy_to_cmd.h
doggy_tele/launch/: doggy_joy.launch
doggy_tele/src/: cmd_to_ocs2.cpp  joy_to_cmd.cpp
legged_common/include/legged_common/hardware_interface/: ContactSensorInterface.h  HybridJointInterface.h  HybridTorqueJointInterface.h  PDHybridMotorControl.h
legged_common/src/: InfoROSDebug.cpp
legged_controllers/bash/: call_controller.sh
legged_controllers/config/: controllers.yaml
legged_controllers/config/a1/: task.info
legged_controllers/config/a1/real/: task.info
legged_controllers/config/a1/simulation/: reference.info  task.info
legged_controllers/config/go2/real/: reference.info  task.info
legged_controllers/config/go2/simulation/: task.info
legged_controllers/include/legged_controllers/: LeggedController.h  SafetyChecker.h
legged_controllers/launch/: joy_teleop.launch  legged_control.launch  legged_control_tele.launch  load_controller.launch
legged_controllers/rviz/: legged_robot.rviz
legged_controllers/src/: LeggedController.cpp
legged_estimation/: CMakeLists.txt
legged_estimation/include/legged_estimation/: InfoROSDebug.h  SlipDetection.h  StateEstimateBase.h
legged_estimation/src/: LinearKalmanFilter.cpp  SlipDetection.cpp  StateEstimateBase.cpp
legged_examples/legged_unitree/legged_unitree_description/: CMakeLists.txt  package.xml
legged_examples/legged_unitree/legged_unitree_description/launch/: empty_world.launch  ice_world.launch
legged_examples/legged_unitree/legged_unitree_description/urdf/: robot.xacro
legged_examples/legged_unitree/legged_unitree_description/urdf/common/: gazebo.xacro  lidar.xacro
legged_examples/legged_unitree/legged_unitree_description/urdf/go2/: const.xacro
legged_examples/legged_unitree/legged_unitree_hw/: CMakeLists.txt
legged_examples/legged_unitree/legged_unitree_hw/config/: a1.yaml  go2.yaml
legged_examples/legged_unitree/legged_unitree_hw/include/legged_unitree_hw/: UnitreeHW.h  UnitreeHW_sdk2.h
legged_examples/legged_unitree/legged_unitree_hw/launch/: go2.launch  legged_unitree_hw.launch
legged_examples/legged_unitree/legged_unitree_hw/src/: UnitreeHW.cpp  UnitreeHW_sdk2.cpp  legged_unitree_hw.cpp
legged_gazebo/: CMakeLists.txt
legged_gazebo/config/: default.yaml
legged_gazebo/include/legged_gazebo/: LeggedHWSim.h
legged_gazebo/src/: LeggedHWSim.cpp
legged_gazebo/worlds/: ice_world.world
legged_hw/include/legged_hw/: LeggedHW.h
legged_hw/src/: LeggedHW.cpp
legged_interface/include/legged_interface/: LeggedInterface.h
legged_wbc/include/legged_wbc/: WbcBase.h
legged_wbc/src/: WbcBase.cpp
livox_laser_simulation/: CMakeLists.txt
livox_laser_simulation/launch/: livox_simulation.launch
livox_laser_simulation/rviz/: livox_simulation.rviz
livox_laser_simulation/src/: livox_points_plugin.cpp
ocs2/ocs2_core/cmake/: ocs2_cxx_flags.cmake
ocs2/ocs2_mpc/include/ocs2_mpc/: SystemObservation.h
ocs2/ocs2_mpc/src/: SystemObservation.cpp
ocs2/ocs2_mpcnet/ocs2_ballbot_mpcnet/launch/: ballbot_mpcnet.launch
ocs2/ocs2_mpcnet/ocs2_legged_robot_mpcnet/launch/: legged_robot_mpcnet.launch
ocs2/ocs2_msgs/msg/: mpc_observation.msg
ocs2/ocs2_pinocchio/ocs2_centroidal_model/include/ocs2_centroidal_model/: CentroidalModelInfo.h
ocs2/ocs2_pinocchio/ocs2_centroidal_model/src/: FactoryFunctions.cpp
ocs2/ocs2_raisim/ocs2_legged_robot_raisim/launch/: legged_robot_ddp_raisim.launch  legged_robot_sqp_raisim.launch
ocs2/ocs2_robotic_examples/ocs2_ballbot_ros/launch/: ballbot_ddp.launch  ballbot_mpc_mrt.launch  ballbot_slp.launch  ballbot_sqp.launch
ocs2/ocs2_robotic_examples/ocs2_cartpole_ros/launch/: cartpole.launch
ocs2/ocs2_robotic_examples/ocs2_double_integrator/config/mpc/: task.info
ocs2/ocs2_robotic_examples/ocs2_double_integrator_ros/launch/: double_integrator.launch
ocs2/ocs2_robotic_examples/ocs2_legged_robot_ros/include/ocs2_legged_robot_ros/visualization/: LeggedRobotVisualizer.h
ocs2/ocs2_robotic_examples/ocs2_legged_robot_ros/launch/: legged_robot_ddp.launch  legged_robot_ipm.launch  legged_robot_sqp.launch
ocs2/ocs2_robotic_examples/ocs2_legged_robot_ros/src/: LeggedRobotPoseCommandNode.cpp
ocs2/ocs2_robotic_examples/ocs2_legged_robot_ros/src/visualization/: LeggedRobotVisualizer.cpp
ocs2/ocs2_robotic_examples/ocs2_mobile_manipulator_ros/launch/include/: mobile_manipulator.launch
ocs2/ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_anymal_loopshaping_mpc/launch/: mpc.launch
ocs2/ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_anymal_mpc/launch/: mpc.launch
ocs2/ocs2_robotic_examples/ocs2_quadrotor_ros/launch/: quadrotor.launch
ocs2/ocs2_ros_interfaces/include/ocs2_ros_interfaces/visualization/: VisualizationHelpers.h
ocs2/ocs2_ros_interfaces/src/command/: TargetTrajectoriesKeyboardPublisher.cpp
ocs2/ocs2_ros_interfaces/src/common/: RosMsgConversions.cpp
ocs2/ocs2_ros_interfaces/src/visualization/: VisualizationHelpers.cpp
ocs2/ocs2_sqp/blasfeo_catkin/: CMakeLists.txt
ocs2/ocs2_sqp/hpipm_catkin/: CMakeLists.txt
